fix: firefox overflow not working property on interview's components

--- a/apps/gauzy/src/app/pages/candidates/manage-candidate-interviews/interview-criterions/interview-criterions.component.scss
+++ b/apps/gauzy/src/app/pages/candidates/manage-candidate-interviews/interview-criterions/interview-criterions.component.scss
@@ -9,7 +9,7 @@
   padding: 1rem;
   border-radius: nb-theme(border-radius);
   height: calc(100vh - 20.75rem);
-  overflow-y: overlay;
+  overflow-y: auto;
   &-card {
     width: 49.5%;
   }
