--- a/apps/gauzy/src/app/pages/candidates/manage-candidate-interviews/interview-panel/interview-panel.component.scss
+++ b/apps/gauzy/src/app/pages/candidates/manage-candidate-interviews/interview-panel/interview-panel.component.scss
@@ -162,7 +162,7 @@
   }
   .custom-grid {
     max-height: calc($default-card-height - 6.5rem);
-    overflow-y: overlay;
+    overflow-y: auto;
   }
   ::ng-deep .header {
     @include nb-select-overrides(
